# newsyacht

./: .plan  .plan.md  LICENSE  README.md  cache.db  justfile  pyproject.toml
.github/workflows/: check.yaml  test.yaml
src/newsyacht/: __init__.py  cli.py  config.py  db.py  models.py  scoring.py  utils.py
src/newsyacht/web/: app.py
src/newsyacht/web/static/: pull_to_refresh.js  style.css
src/newsyacht/web/templates/: archive.html  feed.html  head.html  index.html  nav.html  posts.html
tests/: conftest.py  test_app.py  test_main.py
tests/__snapshots__/: test_app.ambr  test_main.ambr
tests/__snapshots__/test_app/: test_label_text_color[#d7ff64].ambr  test_label_text_color[#ff0000].ambr  test_label_text_color[#ff6600].ambr  test_label_text_color[orange].ambr
tests/__snapshots__/test_main/: test_default_model.ambr  test_default_post_sorting.ambr  test_endpoint[all=1].ambr  test_endpoint[archive].ambr  test_endpoint[feed1].ambr  test_feed_from_xml[arch.xml].ambr  test_feed_from_xml[atom.xml].ambr  test_feed_from_xml[hn.xml].ambr  test_feed_from_xml[nodate.xml].ambr  test_feed_from_xml[reddit.xml].ambr  test_feed_from_xml[releases.xml].ambr  test_index_missing_date.ambr  test_initial_score.ambr  test_insert_comments.ambr  test_load_urls.ambr  test_ranked_index.ambr  test_thumbnail.ambr  test_tokenize_arch.ambr  test_tokenize_hn.ambr
tests/fixtures/: arch.xml  atom.xml  hn.xml  nodate.xml  reddit.xml  releases.xml  urls
