[project]
name = "newsyacht"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brent Westbrook", email = "brentrwestbrook@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
newsyacht = "newsyacht:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
